--- a/templates/team.html
+++ b/templates/team.html
@@ -2,47 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Team</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/min.style.css">
+    
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-    <script src="../static/jquery-3.3.1.min.js"></script>
+    <script src="../static/jquery-3.2.1.slim.min.js" ></script>
     <script src="../static/popper.min.js"></script>
+    <script src="../static/bootstrap.min.js" ></script>
 </head>
 <body>
-<div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="../static/logo.png" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
+        <a class="navbar-brand" href="../templates/index.html"><img src="../static/logo.png" class="logo"></a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <span class="navbar-toggler-icon"></span> -->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="sr-only">Toggle navigation</span>
+
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav  ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="../templates/index.html#about" >About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="../templates/research.html" >Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Research</a>
+                    <a class="nav-link" href="#team" >Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Team <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../templates/index.html">Join Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Join Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="../templates/index.html" >Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
-</div>
-<section>
+</header>
+
+<section id="team">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -60,19 +66,19 @@
                 </div>
             </div>
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="text-align:center;">
+                <div class="creativeMindsDiv">
+                    <div class="creativeMindsCenter">
+                        Our<br>
+                        Creative<br>
+                        Minds
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 memberType">
                         Adviser
                         <hr style="border-color: #F5A623; width: 50%;">
                     </div>
                     <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 centering">
-                        <div class="creativeMindsDiv">
-                            <div class="creativeMindsCenter">
-                                Our<br>
-                                Creative<br>
-                                Minds
-                            </div>
-                        </div>
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
@@ -81,7 +87,7 @@
                                     </div>
                                     <div class="card-body">
                                         <h5 class="card-title memberName"><b>Dr. Aman Parnami</b></h5>
-                                        <p class="card-text memberField">Wearable Computing, Rapid Prototyping Tools,
+                                        <p class="card-text memberField ">Wearable Computing, Rapid Prototyping Tools,
                                             Input and
                                             Interactions,
                                             Maker and Design Education</p>
