--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="../templates/joinus.html">Join Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
