--- a/templates/research.html
+++ b/templates/research.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="../templates/joinus.html">Join Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/index.html" >Contact</a>
+                    <a class="nav-link" href="../templates/index.html#contact" >Contact</a>
                 </li>
             </ul>
         </div>
